# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.584 2006/01/27 02:19:33 agaffney Exp $

*GLI-0.3 (27 Oct 2005)

  26 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  fix handling of 404 for real files
  src/net/server/GLIServerProfile.py:
  look for 'hostname' in attributes instead of 'name'

  22 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/SimpleXMLParser.py:
  initial support for 'include' in XML files
  src/GLIStorageDevice.py:
  initial support for %
  src/GLIClientController.py:
  add debugging statements to pre-install steps

  15 Jan 2006; Preston Cody <codeman@gentoo.org>
  webgli/configfiles:
  	check for key in etc_files['rc.conf'] to fix key error
  webgli/timezone: small fix.
  webgli/extrapackages: list-type fix
  webgli/services: same
  glimd: add/edit_client updates.
  
  12 Jan 2006; Preston Cody <codeman@gentoo.org>
  added configure.pyhtml to glimd. minor changes
  to top and add_client.  fixed up showargs.
  added execute.pyhtml
  changed register clients line in gliserv for name->hostname.
  updated TODO.

  10 Jan 2006; Preston Cody <codeman@gentoo.org>
  src/net/server/*:
  added add/del/edit client/profile.pythml for glimd.
  updated templates, showclients, and gliserv.
  
  10 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/*:
  stupid threading module...

  8 Jan 2006; Preston Cody <codeman@gentoo.org>
  AT: rc.conf -> conf.d/clock
  
  7 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  show 'Calculating dependencies for ...' in subprogress bar at beginning of
  emerge()
  src/GLIArchitectureTemplate.py:
  copy /etc/X11/gdm/gdm.conf.old into chroot if /etc/X11/gdm/gdm.conf exists
  in the chroot
  remove _quickpkg_deps() and _portage_best_{visible,version}()
  src/GLIUtility.py:
  fail immediately in validate_uri() if provided URI can't be parsed