@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.584 2006/01/27 02:19:33 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.585 2006/02/05 19:42:22 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  5 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIPortage.py:
+  copy_pkg_to_chroot() uses $ROOT/vdb for ROOT= installs
 
   26 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/gliserv.py:
